--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -25,7 +25,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "minio": "^7.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -33,6 +36,8 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@types/cors": "^2.8.19",
     "@types/jest": "^29.5.11",
+    "@types/multer": "^2.0.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
