--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -28,7 +28,10 @@
     "minio": "^7.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "openai": "^4.52.0",
+    "redis": "^4.6.12",
     "sharp": "^0.33.0",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -38,6 +41,7 @@
     "@types/jest": "^29.5.11",
     "@types/multer": "^2.0.0",
     "@types/supertest": "^6.0.3",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
