--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -32,7 +32,8 @@
     "redis": "^4.6.12",
     "sharp": "^0.33.0",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "ajv": "^8.12.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
